--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
       <div class="icon cancel-btn">
         <i class="fa fa-times" aria-hidden="true"></i>
       </div>
-      <li><a class="active" href="#top" id="navhome">Home</a></li>
+      <li><a class="active" href="#nft" id="navhome">WEIRD CATS</a></li>
       <li><a href="#catecoin">CATECOIN</a></li>
       <li><a href="#catpay">CATPAY</a></li>
-      <li><a href="#nft">NFT</a></li>
       <li><a href="#burn">BURN!</a></li>
       
     </ul>
@@ -60,7 +59,7 @@
 
 
     <div>
-    <a id="btn">CATECOIN <h1 id="btntext">Your community based Cat-themed utility token</h1></a>
+    <a id="btn">CATEARMY <h1 id="btntext">This time, it will be the cat's turn!</h1></a>
   </div>
     
   </section>
@@ -450,7 +449,7 @@
       <h4 class="why1">BURNED TOKENS</h4>
     </div>
   <div class="col-md-12">
-    <h1 class="comingsoon">This section will be updated once a successful transaction is made.</h1>
+    <h1 class="comingsoon">This section will be updated once a successful community burn is made.</h1>
       <h2 class="ancpercent">You can verify all buyback and burn transactions in this section. Any transaction history will be posted here, including their BSCscan links.</h2>
 
     </div>
