--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </script>
 
   <section id="home">
-    <img src="images/logo.png" id="logo1">
+    <img src="images/catearmycenter.png" id="logo1">
     <img src="images/back.png" id="back">
     <img src="images/mid.png" id="mid">
     <img src="images/front.png" id="front">
