--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     
     <div class="col-md-6">
       <h1 class="aboutus1">Catearmy is a community formed around the Catecoin project. Holders with a strong belief in the Catecoin are part of the Catecoin army.</h1>
-      <h1 class="aboutus2">This website was created to unite Catearmy and help Catecoin become more popular and accessible to the masses.
+      <h1 class="aboutus2"> This website was created to unite Catearmy and help Catecoin reach a wider audience and become more accessible to the masses.
       </h1>
   
-        <h1 class="aboutus2">We will also create burn activities for Catecoin and Catpay tokens to make them more valuable, which will help their price reach greater heights.
+        <h1 class="aboutus2">We will also create burn activities for Catecoin and Catpay tokens to make them more valuable. If we succeed, it will help their price reach greater heights.
         </h1>
 
         <h1 class="aboutus2">
