--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="col-md-6">
           <h1 class="nft1bsc">Weird-looking cats formed an army to live in a world where dogs predominated. Now that their number continues to grow, the cats have a chance to fight back and conquer the world! Adopt your very own weird-looking cats and join our community. Let's take over the world by adopting 10,000 unique Weird Cat soldiers! </h1>
           <h1 class="nft2">Weird Cats was created with the aim of buying back and burning Catecoin tokens with the profit this collection can earn. It also aims to help Catecoin gain new audiences from other platforms.</h1>
-          <h1 class="nft2">The community can also trade their Minted NFTs at OpenSea, where they can gain profit. </h1>
+          <h1 class="nft2">The community can also trade their Minted NFTs at OpenSea, where they can gain profit. Have fun minting. :D</h1>
           <h1 class="nft2"></h1>
           <h1 class="nft4">MINTING COST : 0.0035BNB (CURRENT)</h1>
           <h1 class="nft4bsc"> NEXT MINT #5001-10,000 COST : 0.008BNB </h1>
@@ -164,7 +164,7 @@
             
           <div id="mint-button-container"></div> 
           <div id="mint-counter"></div>                
-            <h1 class="nft4"> You can now help with burning Catecoins with your spare BNB.</h1>
+            <h1 class="nft4"> We can now help with burning Catecoins with our spare BNB.</h1>
             <h1 class="nft5">VISIT CATEARMY AND MIXED CATS AT:</h1>
       <h1 class="nft4x">| <a href="https://opensea.io/collection/weird-cats-official">Opensea.io</a>  | <a href="https://twitter.com/catearmygeneral">Twitter.com</a> |</h1>
 </div>
@@ -177,7 +177,7 @@
     </div>
 
     <div class="col-md-12">
-      <h1 class="nftnote">Note: This collection was created by Catearmy. 80% of the profit from minting and half of the royalties from trading will be used to burn Catecoin or Catpay. This collection is not directly connected to Catecoin developers, teams, or projects, and so these NFTs cannot be used in any of their products.
+      <h1 class="nftnote">Note: This collection was created by Catearmy. 80% of the profit from minting and half of the royalties from trading will be used to burn Catecoin or Catpay. Weird Cats are created by randomly combining Rise of Cats parts. This collection is not directly connected to Catecoin developers, teams, or projects, and so these NFTs cannot be used in any of their products.
       </h1>
     </div>
   </section>
