--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <div class="col-md-12">
         <a href="https://launchmynft.io/collections/0xc18Bbe56e9bFd63dCF1609288e855B9974db823B/FEuaZe87204iyOU89Cao"><img src="images/LMNFT.png"></a>
         <a href="https://nftcalendar.io/"><img src="images/nftcalendar.svg"></a>
-        <a href="#"><img src="images/nftwatcher.png"></a>
+        <a href="https://nftwatcher.net/events/Weird-Cats"><img src="images/nftwatcher.png"></a>
         <a href="#"><img src="images/nestree.png"></a>
         </div>
      
