--- a/index.html
+++ b/index.html
@@ -481,12 +481,12 @@
       <h1 class="faqanswer">- Your wallet will then ask you to confirm your transaction. Click "Confirm" to mint your Cats or "Reject" to decline.</h1>
 
       <h1 class="faqquestion">3. AFTER MINTING WHERE CAN I FIND MY WEIRD CATS?</h1>
-      <h1 class="faqanswer">- You can find it and trade it at <a href="https://opensea.io/account">OpenSea. </a></h1>
+      <h1 class="faqanswer">- You can find and trade it at <a href="https://opensea.io/account">OpenSea. </a></h1>
       <h1 class="faqanswer">- Other mobile wallets already have a section for NFTs that shows your collection.</h1>
-      <h1 class="faqanswer">- If your wallet does not support the NFT section feature, you can go to the wallet browser and go to OpenSea.io, use "WalletConnect" to log in, and browse your profile.</h1>
+      <h1 class="faqanswer">- If your wallet does not support the NFT section feature, you can go to your wallet browser and go to OpenSea.io, use "WalletConnect" to log in, and browse your profile.</h1>
 
       <h1 class="faqquestion">4. WHAT WILL I DO IF OPENSEA SHOWS AN IMAGE OF WEIRD CATS THAT SAYS "CONTENT NOT AVAILABLE YET"?</h1>
-      <h1 class="faqanswer">- Click your Weird Cat NFT and on the top right, click "Refres Metadata". (Since OpenSea processes lots of NFTs at the same time, newly minted NFTs sometimes load slower than others and need to refresh their metadata in order for Opensea to prioritize them in their backlogs.)</h1>
+      <h1 class="faqanswer">- Click your Weird Cat NFT and on the top right, click "Refresh Metadata". (Since OpenSea processes lots of NFTs at the same time, newly minted NFTs sometimes load slower than others and need to refresh their metadata in order for Opensea to prioritize them in their backlogs.)</h1>
 
         </div>
         </div>
