--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
 
     <div class="col-md-12">
-      <h1 class="nftnote">Note: This collection was created by Catearmy. 80% of the profit from minting and half of the royalties from trading will be used to burn Catecoin or Catpay. Weird Cats are created by randomly combining Rise of Cats parts. This collection is not directly connected to Catecoin developers, teams, or projects, and so these NFTs cannot be used in any of their products.
+      <h1 class="nftnote">Note: This collection was created by Catearmy. Weird Cats are created by randomly combining Rise of Cats parts (A Play 2 Earn game Developed by Catecoin). 80% of the profit from minting and half of the royalties from trading will be used to burn Catecoin or Catpay. This collection is not directly connected to Catecoin developers, teams, or projects, and so these NFTs cannot be used in any of their products.
       </h1>
     </div>
   </section>
@@ -481,13 +481,16 @@
       <h1 class="faqanswer">- Your wallet will then ask you to confirm your transaction. Click "Confirm" to mint your Cats or "Reject" to decline.</h1>
 
       <h1 class="faqquestion">3. AFTER MINTING WHERE CAN I FIND MY WEIRD CATS?</h1>
-      <h1 class="faqanswer">- You can find and trade it at <a href="https://opensea.io/account">OpenSea. </a></h1>
+      <h1 class="faqanswer">- You can find it and trade it at <a href="https://opensea.io/account">OpenSea. </a></h1>
       <h1 class="faqanswer">- Other mobile wallets already have a section for NFTs that shows your collection.</h1>
-      <h1 class="faqanswer">- If your wallet does not support the NFT section feature, you can go to your wallet browser and go to OpenSea.io, use "WalletConnect" to log in, and browse your profile.</h1>
+      <h1 class="faqanswer">- If your wallet does not support the NFT section feature, you can go to the wallet browser and go to OpenSea.io, use "WalletConnect" to log in, and browse your profile.</h1>
 
       <h1 class="faqquestion">4. WHAT WILL I DO IF OPENSEA SHOWS AN IMAGE OF WEIRD CATS THAT SAYS "CONTENT NOT AVAILABLE YET"?</h1>
-      <h1 class="faqanswer">- Click your Weird Cat NFT and on the top right, click "Refresh Metadata". (Since OpenSea processes lots of NFTs at the same time, newly minted NFTs sometimes load slower than others and need to refresh their metadata in order for Opensea to prioritize them in their backlogs.)</h1>
+      <h1 class="faqanswer">- Click your Weird Cat NFT and on the top right, click "Refres Metadata". (Since OpenSea processes lots of NFTs at the same time, newly minted NFTs sometimes load slower than others and need to refresh their metadata in order for Opensea to prioritize them in their backlogs.)</h1>
 
+      <h1 class="faqquestion">5. DO YOU HAVE ANY COIN OR TOKEN PROJECTS?</h1>
+      <h1 class="faqanswer">- No, Catearmy's profit will only be focused on burning Catecoin or Catpay.</h1>
+      <h1 class="faqanswer">- Any tokens named after Catearmy are not connected to us.</h1>
         </div>
         </div>
     </div>
